--- a/html/css/style.css
+++ b/html/css/style.css
@@ -26,8 +26,6 @@ body {
     background-color: aliceblue;
     width:max-content;
     margin: auto;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
 }
 .post-footer {
     background-color: whitesmoke;
@@ -43,4 +41,27 @@ body {
     border: 1px solid gainsboro;
     background-color: lavenderblush;
     padding: 2px;
+}
+.userpage-main {
+    background-color: aliceblue;
+    width: 85%;
+    margin: auto;
+}
+.userpage-header {
+    background-color: cornsilk;
+}
+.userpage-username {
+    color: midnightblue;
+}
+.userpage-gallery {
+    background-color: lavenderblush;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.gallery-image {
+    width: 30%;
+    display: inline-block;
+    padding: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
