--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -1,143 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>insta485</title>
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <header>
-            <a href = "/">
-                <img src="/images/logo.png" alt="return to homepage" style="width:500px;">
-            </a>
-            <span style="float: right;">
-                <a href="/explore/">explore</a>
-                 | 
-                <a href="/users/awdeorio/">awdeorio</a>
-            </span>
-        </header>
-        <hr>
-        <div class="post-main">  <!-- First Post -->
-            <div class="post-header">
-                <a href="/users/awdeorio/">
-                    <img src="/uploads/e1a7c5c32973862ee15173b0259e3efdb6a391af.jpg" alt="Profile Picture" style="width:50px">
-                </a>
-                <a href="/users/awdeorio/">
-                    awdeorio
-                </a>
-                <span style="float: right;">
-                    <a href="/posts/3/">
-                        10 minutes ago
-                    </a>
-                </span>
-            </div>
-            <div class="post-img">
-                <img src="/uploads/9887e06812ef434d291e4936417d125cd594b38a.jpg" alt="post3" style="width:500px;margin:auto">
-            </div>
-            <div class="post-footer">
-                <div class="post-likebar">
-                    <p>
-                        1 like
-                    </p>
-                </div>
-                <div class="post-comment-section">
-                    <div class="comment">
-                        <a href="/users/awdeorio/">
-                            <b>awdeorio</b> 
-                        </a>
-                        <p>
-                            #chickensofinstagram
-                        </p>
-                    </div>
-                    <div class="comment">
-                        <a href="/users/jflinn/">
-                            <b>jflinn</b> 
-                        </a>
-                        <p>
-                            I &lt;3 chickens
-                        </p> 
-                    </div>
-                    <div class="comment">
-                        <a href="/users/michjc/">
-                            <b>michjc</b> 
-                        </a> 
-                        <p>
-                            Cute overload!
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="post-main"> <!-- Second Post -->
-            <div class="post-header">
-                <a href="/users/jflinn/">
-                    <img src="/uploads/505083b8b56c97429a728b68f31b0b2a089e5113.jpg" alt="Profile Picture" style="width:50px">
-                </a>
-                <a href="/users/jflinn/">
-                    jflinn
-                </a>
-                <span style="float: right;">
-                    <a href="/posts/2/">
-                        4 hours ago
-                    </a>
-                </span>
-            </div>
-            <div class="post-img">
-                <img src="/uploads/ad7790405c539894d25ab8dcf0b79eed3341e109.jpg" alt="post2" style="width:500px;margin:auto">
-            </div>
-            <div class="post-footer">
-                <div class="post-likebar">
-                    <p>
-                        2 likes
-                    </p>
-                </div>
-                <div class="post-comment-section">
-                    <div class="comment">
-                        <a href="/users/awdeorio/">
-                            <b>awdeorio</b> 
-                        </a> 
-                        <p>
-                            Sick #crossword
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="post-main"> <!-- Third Post -->
-            <div class="post-header">
-                <a href="/users/awdeorio/">
-                    <img src="/uploads/e1a7c5c32973862ee15173b0259e3efdb6a391af.jpg" alt="Profile Picture" style="width:50px">
-                </a>
-                <a href="/users/awdeorio/">
-                    awdeorio
-                </a>
-                <span style="float: right;">
-                    <a href="/posts/1/">
-                        a day ago
-                    </a>
-                </span>
-            </div>
-            <div class="post-img">
-                <img src="/uploads/122a7d27ca1d7420a1072f695d9290fad4501a41.jpg" alt="post1" style="width:500px;margin:auto">
-            </div>
-            <div class="post-footer">
-                <div class="post-likebar">
-                    3 likes
-                </div>
-                <div class="post-comment-section">
-                    <div class="comment">
-                        <a href="/users/jflinn/">
-                            <b>jflinn</b> 
-                        </a>
-                        Walking the plank #chickensofinstagram
-                    </div>
-                    <div class="comment">
-                        <a href="/users/awdeorio/">
-                            <b>awdeorio</b> 
-                        </a>
-                        This was after trying to teach them to do a #crossword
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+{% for post in posts %}
+<div class="post">
+    <div class="post-header">
+        <a href="/users/<user_url_slug>/"><img src="<owner_image_url>" alt="Profile Picture" style="width:50px"></a>
+        <h1><a href="/users/<user_url_slug>/">{{logname}}</a></h1>
+        
+    </div>
+</div>
+{% endfor %}
+{% endblock %}
