fixed logname on base template

--- a/insta485/templates/base.html
+++ b/insta485/templates/base.html
@@ -12,7 +12,7 @@
             <span style="float: right;">
                 <a href="/explore/">explore</a>
                  | 
-                <a href="/users/<logged-in-user>/"><logged-in-user></a>
+                <a href="/users/{{ logname }}/">{{ logname }}</a>
             </span>
         </header>
         <hr>
