--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -3,7 +3,7 @@
 {% for post in posts %}
 <div class="post">
     <div class="post-header">
-        <a href="/users/{{ post.owner }}"/"><img class="profile-pic" src="{{ post.owner_img_url }"} alt="Profile Picture"></a>
+        <a href="/users/{{ post.owner }}"/"><img class="profile-pic" src="{{ post.owner_img_url }" alt="Profile Picture"></a>
         <h1><a href="/users/{{ post.owner }}/">{{ logname }}</a></h1>
         <span style="float: right;"><a href="/posts/{{ post.postid }}/">{{ post.timestamp }}</a></span>
     </div>
