--- a/insta485/templates/user.html
+++ b/insta485/templates/user.html
@@ -1,47 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title> insta485 </title>
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <header>
-            <a href = "/">
-                <img src="/images/logo.png" alt="return to homepage" style="width:500px;">
-            </a>
-            <span style="float: right;">
-                <a href="/explore/">explore</a>
-                 | 
-                <a href="/users/awdeorio/">awdeorio</a>
-            </span>
-        </header>
-        <hr>
-        <div class="userpage-main">
-            <div class="userpage-header">
-                <header class="userpage-username">
-                    awdeorio
-                </header>
-                <p class="userpage-followbar">
-                    2 posts
-                    <a href="/users/awdeorio/followers/"><b>2 followers</b></a>
-                    <a href="/users/awdeorio/following/"><b>2 following</b></a>
-                </p>
-                <p class="userpage-fullname">
-                    Andrew DeOrio
-                </p>
-            </div>
-            <div class="userpage-gallery">
-                <div class="gallery-img">
-                    <a href="/posts/1/">
-                        <img src="/uploads/122a7d27ca1d7420a1072f695d9290fad4501a41.jpg" alt="post1" style="width: 450px;margin:auto">
-                    </a>
-                </div>
-                <div class="gallery-img">
-                    <a href="/posts/3/">
-                        <img src="/uploads/9887e06812ef434d291e4936417d125cd594b38a.jpg" alt="post3" style="width: 450px; margin:auto">
-                    </a>
-                </div>
-            </div>
+{% extends "base.html" %}
+{% block content %}
+    <div id="userpage-header">
+        <div id="usernamebar">
+            <h2>
+                <b>{{% username %}}</b>
+                | 
+                {% if logname_follows_username %}
+                following
+                {% elif logname != username %}
+                not following
+                {% endif %}
+            </h2>
         </div>
-    </body>
-</html>
+        <div id="infobar">
+            {{ total_posts }}
+            {% if total_posts != 1 %}s{% endif %}
+            <a href="/users/{{ username }}/followers/">{{ followers }} follower</a>
+            {% if followers != 1 %}s{% endif %}
+            <a href="/users.{{ username }}/following/">{{ following }} following</a>
+        </div>
+        <div id="namebar">{{ fullname }}</div>
+    </div>
+    <div id="userpage-gallery">
+        {% for post in posts %}
+        <a href="/posts/{{ post.post_id }}/">
+            <img class="gallery-img" src="{{ post.img_url }}" alt="Post {{ post.postid }}">
+        </a>
+        {% endfor %}
+    </div>
+{% endblock %}
