--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -3,21 +3,24 @@
 {% for post in posts %}
 <div class="post">
     <div class="post-header">
-        <a href="/users/{{ post.owner }}"/"><img class="profile-pic" src="{{ post.owner_img_url }" alt="Profile Picture"></a>
+        <a href="/users/{{ post.owner }}"/"><img class="profile-pic" src="{{ post.owner_img_url }}" alt="Profile Picture"></a>
         <h1><a href="/users/{{ post.owner }}/">{{ logname }}</a></h1>
         <span style="float: right;"><a href="/posts/{{ post.postid }}/">{{ post.timestamp }}</a></span>
     </div>
     <img src="{{ post.img_url }}">
     <div class="post-footer">
         <div class="post-likebar">
-            {{ post.likes }} like
+            {{ post.likes }}
             {% if post.likes != "1" %}
-            s
+            likes
+            {% else %}
+            like
             {% endif %}
         </div>
         {% for comment in comments %}
             <div class="comment">
-                <b><a href="/users/{{ comment.owner }}">{{ comment.text }}</a></b>
+                <b><a href="/users/{{ comment.owner }}">{{ comment.owner }}</a></b>
+                {{ comment.text }}
             </div>
         {% endfor %}
     </div>
