--- a/insta485/templates/explore.html
+++ b/insta485/templates/explore.html
@@ -3,8 +3,8 @@
 <h2>Discover People</h2>
 {% for user in not_following %}
 <div class="follow-card">
-    <img class="profile-pic" src="{{ follower.user_img_url }}" alt="Profile Picture of {{ follower.username }}">
-    <a href="/users/{{ follower.username }}/">{{ follower.username }}</a>
+    <img class="profile-pic" src="{{ user.user_img_url }}" alt="Profile Picture of {{ user.username }}">
+    <a href="/users/{{ user.username }}/">{{ user.username }}</a>
 </div>
 {% endfor %}
 {% endblock %}
