--- a/insta485/templates/user.html
+++ b/insta485/templates/user.html
@@ -24,7 +24,7 @@
             {% else %}
             <a href="/users/{{ username }}/followers/">{{ followers }} follower</a>
             {% endif %}
-            <a href="/users.{{ username }}/following/">{{ following }} following</a>
+            <a href="/users/{{ username }}/following/">{{ following }} following</a>
         </div>
         <div id="namebar">{{ fullname }}</div>
     </div>
