--- a/insta485/templates/base.html
+++ b/insta485/templates/base.html
@@ -16,7 +16,7 @@
             </span>
         </header>
         <hr>
-        <div id="content">
+        <div class="content" style="margin: 50px">
             {% block content %}{% endblock %}
         </div>
     </body>
