--- a/insta485/templates/followers.html
+++ b/insta485/templates/followers.html
@@ -3,11 +3,11 @@
 <h2>Followers</h2>
 {% for follower in followers %}
 <div class="follow-card">
-    <img class="profile-pic" src="{{ follower.user_img_url }}" alt="Profile Picture of {{ follower.username }}">
+    <img class="profile-pic" src="{{ follower.user_img_url }}" alt="Profile Picture of {{ follower.username }}" style="width: 50px">
     <a href="/users/{{ follower.username }}/">{{ follower.username }}</a>
-    {% if logname_follows_username %}
+    {% if follower.logname_follows_username %}
     following
-    {% elif logname != username %}
+    {% elif logname != follower.username %}
     not following
     {% endif %}
 </div>
