--- a/insta485/templates/index.html
+++ b/insta485/templates/index.html
@@ -3,26 +3,28 @@
 {% for post in posts %}
 <div class="post">
     <div class="post-header">
-        <a href="/users/{{ post.owner }}"/"><img class="profile-pic" src="{{ post.owner_img_url }}" alt="Profile Picture"></a>
-        <h1><a href="/users/{{ post.owner }}/">{{ logname }}</a></h1>
+        <a href="/users/{{ post.owner }}/"><img class="profile-pic" src="{{ post.owner_img_url }}" alt="Profile Picture for {{ post.owner }}" style="width: 75px;"></a>
+        <a href="/users/{{ post.owner }}/">{{ logname }}</a>
         <span style="float: right;"><a href="/posts/{{ post.postid }}/">{{ post.timestamp }}</a></span>
     </div>
-    <img class="post-img" src="{{ post.img_url }}">
+    <img class="post-img" src="{{ post.img_url }}" alt="Post {{ post.postid }}">
     <div class="post-footer">
         <div class="post-likebar">
             {{ post.likes }}
-            {% if post.likes != "1" %}
+            {% if post.likes != 1 %}
             likes
             {% else %}
             like
             {% endif %}
         </div>
-        {% for comment in comments %}
+        <div class="comment-section">
+        {% for comment in post.comments %}
             <div class="comment">
-                <b><a href="/users/{{ comment.owner }}">{{ comment.owner }}</a></b>
+                <b><a href="/users/{{ comment.owner }}/">{{ comment.owner }}</a></b>
                 {{ comment.text }}
             </div>
         {% endfor %}
+        </div>
     </div>
 </div>
 {% endfor %}
